--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>簡易點名系統</title>
+    <meta name="theme-color" content="3B4252" />
+
     <style>
         body {
             --nord0: #2E3440;
@@ -44,14 +46,15 @@
         }
 
         h1 {
+            /* 標題顏色 */
             color: var(--nord7);
-            margin-bottom: 1rem;
         }
 
         main {
             display: flex;
             flex-direction: column;
             width: 100%;
+            height: 100vh;
             height: 100dvh;
             max-width: 500px;
             margin: 0 auto;
@@ -104,7 +107,6 @@
             justify-content: flex-end;
             align-items: flex-end;
             color: var(--nord4);
-
         }
 
         footer a {
@@ -124,18 +126,18 @@
             box-shadow: rgba(0, 0, 0, 0.2) 0 0 .5rem;
         }
 
-        .history {
+        #history {
             opacity: 0;
         }
 
-        .call {
+        #call {
             z-index: 2;
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
         }
 
-        .add {
+        #add {
             opacity: 0;
         }
 
@@ -147,7 +149,7 @@
         }
 
         input,
-        #search,#add {
+        .search button {
             height: 2rem;
             width: 50%;
             border-radius: .5rem;
@@ -163,7 +165,7 @@
 
         }
 
-        #search,#add  {
+        .search button {
             margin-left: 1rem;
             width: auto;
             line-height: 100%;
@@ -191,20 +193,30 @@
         td {
             padding: .5rem;
         }
+
+        h2 {
+            margin-top: 2rem;
+        }
+        #status{
+            margin: .5rem 0 1rem;
+            color: var(--nord13);
+            font-size: 1.3rem;
+        }
     </style>
 </head>
 
 <body>
     <main>
-        <h1>點名系統</h1>
+        <h1>簡易點名系統</h1>
+        <h2 id="status">歡迎使用</h2>
         <nav>
-            <button onclick="search()">查詢紀錄</button><button onclick="call()">點名</button><button
-                onclick="add()">新增學生</button>
+            <button onclick="searchA()">查詢紀錄</button><button onclick="callA()">點名</button><button
+                onclick="addA()">新增學生</button>
         </nav>
         <section>
-            <div class="history">
+            <div id="history">
                 <div class="search">
-                    <input type="text"><button id="search">搜尋</button>
+                    <input type="text"><button>搜尋</button>
 
                 </div>
                 <table>
@@ -284,39 +296,76 @@
                     </tbody>
                 </table>
             </div>
-            <div class="call">
-                <button>學生1</button><button>學生2</button><button>學生3</button><button>學生4</button><button>學生5</button><button>學生6</button><button>學生7</button><button>學生8</button><button>學生9</button><button>學生10</button><button>學生11</button><button>學生12</button><button>學生13</button><button>學生14</button><button>學生15</button><button>學生16</button><button>學生17</button><button>學生18</button><button>學生19</button><button>學生20</button>
+            <div id="call">
+                <h2>載入中</h2>
             </div>
-            <div class="add"><div class="search"><input type="text"><button id="add">新增</button></div>
-        <h2>新增成功</h2></div>
+            <div id="add">
+                <div class="search"><input type="text"><button>新增</button></div>
+                <h2>新增成功</h2>
+            </div>
         </section>
         <footer><a href="edit-mr.github.io/">毛哥EM</a>製作</footer>
     </main>
     <script>
-        const search = () => {
-            document.querySelector('.history').style.opacity = 1;
-            document.querySelector('.history').style.zIndex = 2;
-            document.querySelector('.call').style.opacity = 0;
-            document.querySelector('.add').style.opacity = 0;
-            document.querySelector('.call').style.zIndex = 1;
-            document.querySelector('.add').style.zIndex = 1;
+        const [history, call, add] = ['history', 'call', 'add'].map(id => document.getElementById(id));
+        const searchA = () => {
+            history.style.opacity = 1;
+            history.style.zIndex = 2;
+            call.style.opacity = add.style.opacity = 0;
+            call.style.zIndex = add.style.zIndex = 1;
+        };
+
+        const callA = () => {
+            history.style.opacity = add.style.opacity = 0;
+            history.style.zIndex = add.style.zIndex = 1;
+            call.style.opacity = 1;
+            call.style.zIndex = 2;
+        };
+
+        const addA = () => {
+            history.style.opacity = call.style.opacity = 0;
+            history.style.zIndex = call.style.zIndex = 1;
+            add.style.opacity = 1;
+            add.style.zIndex = 2;
+        };
+
+        fetch('https://script.google.com/macros/s/AKfycbzxqGIMBbLkCka2aveltdVHYtdG-k_X98qzSd_V9MHDxWaOYXFwZgE3rRHDzCakzTxs/exec?type=list')
+            .then(response => response.json())
+            .then(data => {
+                const callDiv = document.getElementById('call');
+                callDiv.innerHTML = '';
+                data.forEach((item, index) => {
+                    const button = document.createElement('button');
+                    button.textContent = item.name;
+                    button.id = `student-${index + 1}`; // add ID based on index
+                    button.addEventListener('click', () => {
+                        rollCall(item.name, item.left, index + 1);
+                    });
+                    callDiv.appendChild(button);
+                });
+
+            })
+            .catch(error => console.error(error));
+            const status = document.getElementById('status');
+        function rollCall(name, left, index) {
+            status.innerHTML=`${name} 點名中...`;
+            fetch(`https://script.google.com/macros/s/AKfycbzxqGIMBbLkCka2aveltdVHYtdG-k_X98qzSd_V9MHDxWaOYXFwZgE3rRHDzCakzTxs/exec?type=call&name=${name}&time=${new Date()}`)
+                .then(response => {
+                    if (response.ok) {
+                        status.innerHTML=`${name} 已點名成功！剩餘課堂：${left - 1}`;
+                        document.getElementById('student-' + index).style.backgroundColor = 'var(--nord14)';
+                    } else {
+                        status.innerHTML=`${name} 已點名失敗！剩餘課堂：${left}`;
+                        document.getElementById('student-' + index).style.backgroundColor = 'var(--nord11)';
+                    }
+                })
+                .catch(error => {
+                    alert(`發生錯誤：${error}`);
+                });
         }
-        const call = () => {
-            document.querySelector('.history').style.opacity = 0;
-            document.querySelector('.add').style.opacity = 0;
-            document.querySelector('.history').style.zIndex = 1;
-            document.querySelector('.add').style.zIndex = 1;
-            document.querySelector('.call').style.opacity = 1;
-            document.querySelector('.call').style.zIndex = 2;
-        }
-        const add = () => {
-            document.querySelector('.history').style.opacity = 0;
-            document.querySelector('.call').style.opacity = 0;
-            document.querySelector('.history').style.zIndex = 1;
-            document.querySelector('.call').style.zIndex = 1;
-            document.querySelector('.add').style.opacity = 1;
-            document.querySelector('.add').style.zIndex = 2;
-        }
+
+
+
     </script>
 
 </body>
