--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
     <meta charset="UTF-8">
@@ -7,9 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>簡易點名系統</title>
     <meta name="theme-color" content="3B4252" />
-
     <style>
+        h1 {
+            /* 標題顏色 */
+            color: var(--nord7)
+        }
+
         body {
+            /* 背景顏色 */
+            background-color: var(--nord0)
+        }
+
+        body {
+            /* 可選顏色 */
             --nord0: #2E3440;
             --nord1: #3B4252;
             --nord2: #434C5E;
@@ -27,7 +37,48 @@
             --nord14: #A3BE8C;
             --nord15: #B48EAD;
             --black: #000;
-            --line: #4C566A;
+            --line: #4C566A
+        }
+
+        main,
+        nav {
+            display: flex
+        }
+
+        .call button,
+        button:hover {
+            background-color: var(--nord2)
+        }
+
+        button,
+        section>div {
+            background-color: var(--nord1);
+            box-shadow: rgba(0, 0, 0, .2) 0 0 .5rem
+        }
+
+        main,
+        section>div {
+            padding: 1rem;
+            width: 100%
+        }
+
+        footer,
+        footer a {
+            color: var(--nord4)
+        }
+
+        .search button,
+        button,
+        input,
+        section>div {
+            box-shadow: rgba(0, 0, 0, .2) 0 0 .5rem
+        }
+
+        body,
+        button,
+        h2,
+        html {
+            text-align: center
         }
 
         * {
@@ -35,35 +86,24 @@
             margin: 0;
             box-sizing: border-box;
             font-family: Arial, "微軟正黑體", Helvetica, sans-serif;
-            color: var(--nord6);
+            color: var(--nord6)
         }
 
         body,
         html {
-            min-height: 100%;
-            background-color: var(--nord0);
-            text-align: center;
-        }
-
-        h1 {
-            /* 標題顏色 */
-            color: var(--nord7);
+            min-height: 100%
         }
 
         main {
-            display: flex;
             flex-direction: column;
-            width: 100%;
             height: 100vh;
             height: 100dvh;
             max-width: 500px;
-            margin: 0 auto;
-            padding: 1rem;
+            margin: 0 auto
         }
 
         nav {
-            display: flex;
-            justify-content: space-between;
+            justify-content: space-between
         }
 
         button {
@@ -71,140 +111,117 @@
             height: 50px;
             width: calc(1/3*100% - 1rem);
             line-height: 50px;
-            text-align: center;
-            background-color: var(--nord1);
             border-radius: 1rem;
             text-decoration: none;
             border: none;
             cursor: pointer;
-            transition: background-color .2s ease-in-out;
-            box-shadow: rgba(0, 0, 0, 0.2) 0 0 .5rem;
+            transition: background-color .2s ease-in-out
+        }
+
+        #call,
+        .search,
+        footer {
+            display: flex
         }
 
         .call button {
             width: calc(1/4*100% - 1rem);
-            margin: .5rem;
-            background-color: var(--nord2);
+            margin: .5rem
         }
 
         button:hover {
-            background-color: var(--nord2);
+            filter: brightness(1.2)
         }
 
         button:active {
             background-color: var(--nord3);
+            filter: brightness(1.5)
         }
 
         section {
             flex-grow: 1;
             margin: 1rem 0;
-            position: relative;
+            position: relative
         }
-
 
         footer {
-            display: flex;
             justify-content: flex-end;
-            align-items: flex-end;
-            color: var(--nord4);
-        }
-
-        footer a {
-            color: var(--nord4);
+            align-items: flex-end
         }
 
         section>div {
             border-radius: 1rem;
-            background-color: var(--nord1);
-            padding: 1rem;
             overflow-x: hidden;
             overflow-y: auto;
             position: absolute;
-            width: 100%;
             height: 100%;
-            transition: opacity .5s ease-in-out;
-            box-shadow: rgba(0, 0, 0, 0.2) 0 0 .5rem;
+            transition: opacity .5s ease-in-out
         }
 
+        #add,
         #history {
-            opacity: 0;
+            opacity: 0
         }
 
         #call {
             z-index: 2;
-            display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
-        }
-
-        #add {
-            opacity: 0;
+            justify-content: space-between
         }
 
         .search {
-            display: flex;
             justify-content: center;
-            align-items: center;
-
+            align-items: center
         }
 
-        input,
-        .search button {
+        .search button,
+        input {
             height: 2rem;
             width: 50%;
             border-radius: .5rem;
             border: transparent;
             padding: 0 1rem;
             background-color: var(--nord3);
-            color: var(--nord4);
-            box-shadow: rgba(0, 0, 0, 0.2) 0 0 .5rem;
+            color: var(--nord4)
+        }
+
+        h2,
+        table {
+            width: 100%
         }
 
         input:focus {
-            outline: transparent;
-
+            outline: transparent
         }
 
         .search button {
             margin-left: 1rem;
             width: auto;
-            line-height: 100%;
-        }
-
-        button:hover {
-            filter: brightness(1.2);
-        }
-
-        button:active {
-            filter: brightness(1.5);
+            line-height: 100%
         }
 
         table {
-            width: 100%;
             border-collapse: collapse;
-            margin-top: 1rem;
-
+            margin-top: 1rem
         }
 
         tr {
-            border-bottom: 1px solid var(--line);
+            border-bottom: 1px solid var(--line)
         }
 
         td {
-            padding: .5rem;
+            padding: .5rem
         }
 
         h2 {
             margin-top: 2rem;
-            text-align: center;
-            width: 100%;
-            font-weight: 600;
+            font-weight: 600
         }
 
         #status {
             margin: .5rem 0 1rem;
             color: var(--nord13);
-            font-size: 1.3rem;
+            font-size: 1.3rem
         }
     </style>
 </head>
@@ -241,110 +258,12 @@
                 <div class="search"><input type="text"><button>新增</button></div>
             </div>
         </section>
-        <footer><a href="edit-mr.github.io/">毛哥EM</a>製作</footer>
+        <footer><a href="edit-mr.github.io/">毛哥EM</a>製作 | <a href="https://em-tec.github.io/post/roll-call">教學</a></footer>
     </main>
     <script>
-        const [history, call, add] = ['history', 'call', 'add'].map(id => document.getElementById(id));
-        const searchA = () => {
-            history.style.opacity = 1;
-            history.style.zIndex = 2;
-            call.style.opacity = add.style.opacity = 0;
-            call.style.zIndex = add.style.zIndex = 1;
-        };
-
-        const callA = () => {
-            history.style.opacity = add.style.opacity = 0;
-            history.style.zIndex = add.style.zIndex = 1;
-            call.style.opacity = 1;
-            call.style.zIndex = 2;
-        };
-
-        const addA = () => {
-            history.style.opacity = call.style.opacity = 0;
-            history.style.zIndex = call.style.zIndex = 1;
-            add.style.opacity = 1;
-            add.style.zIndex = 2;
-        };
-
-        fetch('https://script.google.com/macros/s/AKfycbzxqGIMBbLkCka2aveltdVHYtdG-k_X98qzSd_V9MHDxWaOYXFwZgE3rRHDzCakzTxs/exec?type=list')
-            .then(response => response.json())
-            .then(data => {
-                const callDiv = document.getElementById('call');
-                callDiv.innerHTML = '';
-                data.forEach((item, index) => {
-                    const button = document.createElement('button');
-                    button.textContent = item.name;
-                    button.id = `student-${index + 1}`;
-                    button.addEventListener('click', () => {
-                        rollCall(item.name, item.left, index + 1);
-                    });
-                    callDiv.appendChild(button);
-                });
-
-            })
-            .catch(error => console.error(error));
-        const status = document.getElementById('status');
-        //https://script.google.com/macros/s/AKfycbzxqGIMBbLkCka2aveltdVHYtdG-k_X98qzSd_V9MHDxWaOYXFwZgE3rRHDzCakzTxs/exec?type=search&name=zzz
-        function rollCall(name, left, index) {
-            status.innerHTML = `${name} 點名中...`;
-            var date = new Date();
-            var date = date.toLocaleString("zh-TW", { year: "numeric", month: "2-digit", day: "2-digit", hour: "numeric", minute: "numeric", second: "numeric", hour12: true }).replace("-", "/").replace(" ", " ");
-            fetch(`https://script.google.com/macros/s/AKfycbzxqGIMBbLkCka2aveltdVHYtdG-k_X98qzSd_V9MHDxWaOYXFwZgE3rRHDzCakzTxs/exec?type=call&name=${name}&time=${date}&remain=${left}`)
-                .then(response => {
-                    if (response.ok) {
-                        status.innerHTML = `${name} 已點名成功！剩餘課堂：${left - 1}`;
-                        document.getElementById('student-' + index).style.backgroundColor = 'var(--nord14)';
-                    } else {
-                        status.innerHTML = `${name} 已點名失敗！剩餘課堂：${left}`;
-                        document.getElementById('student-' + index).style.backgroundColor = 'var(--nord11)';
-                    }
-                })
-                .catch(error => {
-                    status.innerHTML = `發生錯誤：${error}`;
-                });
-        }
-        const searchBtn = document.querySelector('#history button');
-        const searchInput = document.querySelector('#history input');
-        const historyTableBody = document.querySelector('#history tbody');
-
-        searchBtn.addEventListener('click', () => {
-            status.innerHTML = "搜尋中..."
-            const name = searchInput.value;
-            const url = `https://script.google.com/macros/s/AKfycbzxqGIMBbLkCka2aveltdVHYtdG-k_X98qzSd_V9MHDxWaOYXFwZgE3rRHDzCakzTxs/exec?type=search&name=${encodeURIComponent(name)}`;
-            fetch(url)
-                .then(response => response.json())
-                .then(data => {
-                    const tableBody = document.querySelector("#history table tbody");
-                    tableBody.innerHTML = "";
-                    data.forEach((row) => {
-                        const tr = document.createElement("tr");
-                        const timeTd = document.createElement("td");
-                        const leftTd = document.createElement("td");
-                        var date = new Date(row.time);
-                        timeTd.textContent = date.toLocaleString("zh-TW", { year: "numeric", month: "2-digit", day: "2-digit", hour: "numeric", minute: "numeric", second: "numeric", hour12: true }).replace("-", "/").replace(" ", " ");
-                        leftTd.textContent = row.left;
-                        tr.appendChild(timeTd);
-                        tr.appendChild(leftTd);
-                        tableBody.appendChild(tr);
-                        status.innerHTML = "搜尋完成";
-                    });
-                })
-                .catch(error => status.innerHTML = error);
-        });
-        const addBtn = document.querySelector('#add button');
-        const addInput = document.querySelector('#add input');
-
-        addBtn.addEventListener('click', () => {
-            const name = addInput.value;
-            if (!name) return;
-            status.innerHTML = "新增中..."
-            fetch(`https://script.google.com/macros/s/AKfycbzxqGIMBbLkCka2aveltdVHYtdG-k_X98qzSd_V9MHDxWaOYXFwZgE3rRHDzCakzTxs/exec?type=new&name=${encodeURIComponent(name)}`)
-                .then(response => status.innerHTML = "新增成功")
-                .catch(error => {
-                    status.innerHTML = error;
-                });
-        });
-
+        //部屬連結放這裡
+        var url = "https://script.google.com/macros/s/AKfycbzxqGIMBbLkCka2aveltdVHYtdG-k_X98qzSd_V9MHDxWaOYXFwZgE3rRHDzCakzTxs/exec";
+        const [history, call, add] = ["history", "call", "add"].map(t => document.getElementById(t)), searchA = () => { history.style.opacity = 1, history.style.zIndex = 2, call.style.opacity = add.style.opacity = 0, call.style.zIndex = add.style.zIndex = 1 }, callA = () => { history.style.opacity = add.style.opacity = 0, history.style.zIndex = add.style.zIndex = 1, call.style.opacity = 1, call.style.zIndex = 2 }, addA = () => { history.style.opacity = call.style.opacity = 0, history.style.zIndex = call.style.zIndex = 1, add.style.opacity = 1, add.style.zIndex = 2 }; fetch(url + "?type=list").then(t => t.json()).then(t => { let e = document.getElementById("call"); e.innerHTML = "", t.forEach((t, n) => { let a = document.createElement("button"); a.textContent = t.name, a.id = `student-${n + 1}`, a.addEventListener("click", () => { rollCall(t.name, t.left, n + 1) }), e.appendChild(a) }) }).catch(t => console.error(t)); const status = document.getElementById("status"); function rollCall(t, e, n) { status.innerHTML = `${t} 點名中...`; var a = new Date, a = a.toLocaleString("zh-TW", { year: "numeric", month: "2-digit", day: "2-digit", hour: "numeric", minute: "numeric", second: "numeric", hour12: !0 }).replace("-", "/").replace(" ", " "); fetch(url + `?type=call&name=${t}&time=${a}&remain=${e}`).then(a => { a.ok ? (status.innerHTML = `${t} 已點名成功！剩餘課堂：${e - 1}`, document.getElementById("student-" + n).style.backgroundColor = "var(--nord14)") : (status.innerHTML = `${t} 已點名失敗！剩餘課堂：${e}`, document.getElementById("student-" + n).style.backgroundColor = "var(--nord11)") }).catch(t => { status.innerHTML = `發生錯誤：${t}` }) } const searchBtn = document.querySelector("#history button"), searchInput = document.querySelector("#history input"), historyTableBody = document.querySelector("#history tbody"); searchBtn.addEventListener("click", () => { status.innerHTML = "搜尋中..."; let t = searchInput.value, e = `${e}?type=search&name=${encodeURIComponent(t)}`; fetch(e).then(t => t.json()).then(t => { let e = document.querySelector("#history table tbody"); e.innerHTML = "", t.forEach(t => { let n = document.createElement("tr"), a = document.createElement("td"), l = document.createElement("td"); var r = new Date(t.time); a.textContent = r.toLocaleString("zh-TW", { year: "numeric", month: "2-digit", day: "2-digit", hour: "numeric", minute: "numeric", second: "numeric", hour12: !0 }).replace("-", "/").replace(" ", " "), l.textContent = t.left, n.appendChild(a), n.appendChild(l), e.appendChild(n), status.innerHTML = "搜尋完成" }) }).catch(t => status.innerHTML = t) }); const addBtn = document.querySelector("#add button"), addInput = document.querySelector("#add input"); addBtn.addEventListener("click", () => { let t = addInput.value; t && (status.innerHTML = "新增中...", fetch(`${url}?type=new&name=${encodeURIComponent(t)}`).then(t => status.innerHTML = "新增成功").catch(t => { status.innerHTML = t })) });
     </script>
 
 </body>
